[package]
name = "cryocat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cryocat-common = { path = "../cryocat-common" }
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = { version = "1.0.95", features = ["backtrace"] }
thiserror = "2.0.11"
clap = { version = "4.5.26", features = ["derive"] }
