[package]
name = "cryocat"
version = "0.1.0"
edition = "2024"

[dependencies]
cryocat-common = { path = "../cryocat-common" }
anyhow = { version = "1.0.95", features = ["backtrace"] }
futures-util = "0.3.31"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
