[package]
name = "cryocat"
version = "0.1.0"
edition = "2024"

[dependencies]
cryocat-common = { path = "../cryocat-common" }
anyhow = { version = "1.0.95", features = ["backtrace"] }
futures-util = "0.3.31"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
webrtc = "0.12.0"
clap = { version = "4.5.26", features = ["derive", "env"] }
